@@ -21,6 +21,7 @@ Dan J. Walters <djw@cs.utexas.edu>
 Daniel Pittman <daniel@rimspace.net>
 Daniel Wagner <wagi@gmx.ch>
 Danilo Godec <danci@agenda.si>
+Derrik Pates <dpates@dsdk12.net>
 Edmund GRIMLEY EVANS <edmundo@rano.demon.co.uk>
 Edward Killips <ekillips@triton.net>
 Eric Hanchrow <erich@microsoft.com>
